test/files/neg/t7212.check
t7212.scala:8: error: type mismatch;
 found   : Object
 required: String
  val s: String = k.f
                    ^
t7212.scala:14: error: type mismatch;
 found   : Object
 required: String
  val s: String = f.f
                    ^
t7212.scala:21: error: type mismatch;
 found   : Object
 required: String
  val s: String = w.f
                    ^
3 errors
